<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="configaracionParammetrs" Id="{92660317-8561-471f-af19-426f2e046313}">
    <Declaration><![CDATA[TYPE configaracionParammetrs :
STRUCT
	CurPosDirMin : REAL := 100; // Minimální proud na solenoid v daném směru [mA]
	CurPosDirMax : REAL := 500; // Maximální proud na solenoid v daném směru [mA]
	CurNegDirMin : REAL := 100; // Minimální proud na solenoid v daném směru [mA]
	CurNegDirMax : REAL := 500; // Maximální proud na solenoid v daném směru [mA]
	RampPosDirUp : INT := 10; // Doba změny z min. na max. otevření v daném směru [ms]
	RampPosDirDown :INT := 10; // Doba změny z max. na min. otevření v daném směru [ms]
	RampNegDirUp : INT := 10; // Doba změny z min. na max. otevření v daném směru [ms]
	RampNegDirDown : INT := 10; // Doba změny z max. na min. otevření v daném směru [ms]
	Deadtime : INT := 5; // Kompenzace setrvačnosti při reverzaci [ms]

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>